first push branch duc

--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,7 @@
     <title>Capstone-Taiwind</title>
     <link rel="stylesheet" href="./css/output.css" />
   </head>
-  <body></body>
+  <body>
+    <section class="some-faq"></section>
+  </body>
 </html>
