--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Capstone-Taiwind</title>
     <link rel="stylesheet" href="./src/css/output.css" />
-    <!-- <link rel="icon" href="../src/img/logo.png" type="image/x-icon"> -->
+    <link rel="icon" href="../src/img/logo.png" type="image/x-icon">
 
     <!-- FontAweSome  -->
     <link
@@ -643,7 +643,7 @@
           <div class="ascent wow fadeInUp mb-10 lg:mb-20" data-wow-delay=".3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
             <div class="flex items-center mb-4">
               <img src="./src/img/logo.png" alt="">
-              <h3 class="font-bold text-3xl">Ascent</h3>
+              <h3 class="font-bold text-3xl ml-2">Ascent</h3>
             </div>
             <p class="text-black opacity-60 pb-8">Yes, there are many notable ma corporate the a od businesses Informati worldwide</p>
             <ul class="flex">
