--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div id="mobileMenu" class="font-jost fixed -right-full top-0 w-full z-50 max-w-md min-h-screen h-full bg-[#FEF0E4] p-8 transition-all ease-in-out duration-500 border-l-2 border-[#F7941E]">
           <div class="flex justify-between items-center mb-6">
             <div class="flex items-center cursor-pointer">
-              <img src="./src/img/logo.png" alt="">
+              <img src="./src/img/logo.png" alt="logo">
               <a href="#" class="font-bold text-3xl ml-1 block">Ascent</a>
             </div>
             <a id="offTicker" class="w-10 h-10 flex justify-center items-center  bg-[#F7941E]  text-white rounded-md cursor-pointer">
@@ -172,7 +172,7 @@
           <div class="flex items-center justify-between">
             <div class="logo">
               <a class="flex items-center text-3xl font-bold" href="#">
-                <img src="./img/logo.png" alt="">
+                <img src="./src/img/logo.png" alt="">
                 <span>Ascent</span>
               </a>
             </div>
