--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <div class="logo">
               <a class="flex items-center text-3xl font-bold" href="#">
                 <img src="./src/img/logo.png" alt="">
-                <span>Ascent</span>
+                <span class="ml-1">Ascent</span>
               </a>
             </div>
             <div class="block__right flex items-center">
