--- a/src/index.html
+++ b/src/index.html
@@ -181,7 +181,7 @@
                 <ul class="nav__left flex items-center gap-8 mr-16 font-bold font-jost text-lg">
                   <li class="group relative">
                     <a class="group-hover:text-[#F7941E] transition-all duration-300" href="#">Home <i class="fa-solid fa-angle-down text-sm"></i></a>
-                    <ul class="absolute top-full min-w-56 shadow-custom z-10 opacity-0 invisible text-xs translate-y-5 group-hover:opacity-100 group-hover:visible  group-hover:translate-y-0 transition-all duration-500 bg-white">
+                    <ul class="absolute top-full mt-6 min-w-56 shadow-custom z-10 opacity-0 invisible text-xs translate-y-5 group-hover:opacity-100 group-hover:visible  group-hover:translate-y-0 transition-all duration-500 bg-white">
                       <li><a class="block px-2 py-3 text-base hover:text-white hover:bg-[#F7941E] transition-all duration-500 border-b border-b-slate-300" href="#">Home-1</a></li>
                       <li><a class="block px-2 py-3 text-base hover:text-white hover:bg-[#F7941E] transition-all" href="#">Home-2</a></li>
                     </ul>
@@ -189,21 +189,21 @@
                   <li class="group hover:text-[#F7941E] transition-all duration-500"><a href="#">About Us</a></li>
                   <li class="group relative">
                     <a class="hover:text-[#F7941E] transition-all duration-500" href="#">Services <i class="fa-solid fa-angle-down text-sm"></i></a>
-                    <ul class="absolute top-full min-w-56 shadow-custom z-10 opacity-0 invisible text-xs translate-y-5 group-hover:opacity-100 group-hover:visible  group-hover:translate-y-0 transition-all duration-500 bg-white">
+                    <ul class="absolute mt-6 top-full min-w-56 shadow-custom z-10 opacity-0 invisible text-xs translate-y-5 group-hover:opacity-100 group-hover:visible  group-hover:translate-y-0 transition-all duration-500 bg-white">
                       <li><a class="block px-2 py-3 text-base hover:text-white hover:bg-[#F7941E] transition-all duration-500 border-b border-b-slate-300" href="#">Services</a></li>
                       <li><a class="block px-2 py-3 text-base hover:text-white hover:bg-[#F7941E] transition-all duration-500" href="#">Services Details</a></li>
                     </ul>
                   </li>
                   <li class="group relative">
                     <a class="hover:text-[#F7941E] transition-all duration-500" href="#">Blog <i class="fa-solid fa-angle-down text-sm"></i></a>
-                    <ul class="absolute top-full min-w-56 shadow-custom z-10 opacity-0 invisible text-xs translate-y-5 group-hover:opacity-100 group-hover:visible  group-hover:translate-y-0 transition-all duration-500 bg-white">
+                    <ul class="absolute mt-6 top-full min-w-56 shadow-custom z-10 opacity-0 invisible text-xs translate-y-5 group-hover:opacity-100 group-hover:visible  group-hover:translate-y-0 transition-all duration-500 bg-white">
                       <li><a class="block px-2 py-3 text-base hover:text-white hover:bg-[#F7941E] transition-all duration-500 border-b border-b-slate-300" href="#">Blog</a></li>
                       <li><a class="block px-2 py-3 text-base hover:text-white hover:bg-[#F7941E] transition-all duration-500" href="#">Blog Details</a></li>
                     </ul>
                   </li>
                   <li class="group relative">
                     <a class="hover:text-[#F7941E] transition-all duration-500" href="#">Page <i class="fa-solid fa-angle-down text-sm "></i></a>
-                    <ul class="absolute top-full min-w-56 shadow-custom z-10 opacity-0 invisible text-xs translate-y-5 group-hover:opacity-100 group-hover:visible  group-hover:translate-y-0 transition-all duration-500 bg-white">
+                    <ul class="absolute mt-6 top-full min-w-56 shadow-custom z-10 opacity-0 invisible text-xs translate-y-5 group-hover:opacity-100 group-hover:visible  group-hover:translate-y-0 transition-all duration-500 bg-white">
                       <li><a class="block px-2 py-3 text-base hover:text-white hover:bg-[#F7941E] transition-all duration-500 border-b border-b-slate-300" href="#">About</a></li>
                       <li><a class="block px-2 py-3 text-base hover:text-white hover:bg-[#F7941E] transition-all duration-500 border-b border-b-slate-300" href="#">Services</a></li>
                       <li><a class="block px-2 py-3 text-base hover:text-white hover:bg-[#F7941E] transition-all duration-500 border-b border-b-slate-300" href="#">Services Details</a></li>
